fix an issue with description not fitting in the card when font sizes are too big.

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
 .content-card {
     display: grid;
     grid-template-columns: 320px 480px;
-    grid-template-rows: 80px 160px;
+    grid-template-rows: 80px minmax(160px, auto);
     gap: 0px;
     margin: 5px;
     padding: 10px;
